fixed lists spacing + improvements

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -122,7 +122,7 @@ html {
     @apply w-[33.33%] sm:w-[25%] hover:sm:w-[50%] lg:w-[20%] hover:lg:w-[40%] xl:w-[16.67%] hover:xl:w-[33.34%] 2xl:w-[14.29%] hover:2xl:w-[28.57%] 3xl:w-[12.5%] hover:3xl:w-[25%];
   }
   .listHeight {
-    @apply h-[calc((100vw-24px-4px*6)/3*1.5)] sm:h-[calc((86vw-6px*9)/4*1.5)] lg:h-[calc((90vw-0.5rem*11)/5*1.5)] xl:h-[calc(((90vw-0.5rem*13)/6)*1.5)] 2xl:h-[calc((90vw-0.5rem*15)/7*1.5)] 3xl:h-[calc((90vw-12px*17)/8*1.5)];
+    @apply h-[calc((100vw-24px-4px*6)/3*1.5)] sm:h-[calc((90vw-8px*9)/4*1.5)] lg:h-[calc((90vw-10px*11)/5*1.5)] xl:h-[calc(((90vw-12px*13)/6)*1.5)] 2xl:h-[calc((90vw-12px*15)/7*1.5)] 3xl:h-[calc((90vw-14px*17)/8*1.5)];
   }
 }
 
